feat: add PasswordEncoder bean and implement UserDetails in Usuario class